Optimize performance of key bulk deletion (#1280)